# zeroclaw-companion

./: .gitignore  Cargo.toml  README.md  companion.characters.json.example  companion.runtime.json.example  companion.toml.example  rust-toolchain.toml
apps/companion-server/: Cargo.toml
apps/companion-server/src/: main.rs  pulse_api.rs  state.rs
apps/companion-server/tests/: http_smoke.rs
apps/companion-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/companion-tauri/capabilities/: default.json
apps/companion-tauri/examples/: probe_chunk_decode.rs
apps/companion-tauri/src/: lib.rs  main.rs
crates/companion-avatar/: Cargo.toml
crates/companion-avatar/src/: config.rs  expression.rs  lib.rs  lip_sync.rs  subagent.rs  ws.rs
crates/companion-avatar/tests/: tts_port_e2e.rs
crates/companion-core/: Cargo.toml
crates/companion-core/src/: config.rs  lib.rs  llm.rs  zeroclaw.rs
crates/companion-core/tests/: llm_client_e2e.rs  zeroclaw_client_e2e.rs
crates/companion-pulse/: Cargo.toml
crates/companion-pulse/src/: config.rs  lib.rs  models.rs  scheduler.rs  storage.rs
crates/companion-pulse/src/collectors/: hackernews.rs  mod.rs  rss.rs
docs/: E2E-SMOKE-TEST.md  PLAN-PERSONA-CONSOLE.md  PULSE-MIGRATION.md  TESTING-SOP.md
scripts/: cdp_reload_snap.py  cdp_snap.py  cdp_snap_pulse.py  cdp_snap_settings.py  e2e_audio_inspect.py  e2e_avatar_ws.py  e2e_canvas_prefs_test.py  e2e_model_swap_test.py  e2e_multi_client.py  e2e_overlay_chat_test.py  e2e_pet_chrome_test.py  e2e_test.sh  smoke.ps1  smoke.sh
tools/agents/: hermes-bridge.py
tools/avatar/: gptsovits_tts_server.py  nmt_translator_server.py
tts_tools/: __init__.py  _mock_stack.py  _rig_shim.py  _test_helpers.py  _zc_webhook_adapter.py  bench_latency.py  render_report.py  run_all.py  test_audio_integrity.py  test_backend_api.py  test_backend_api_extended.py  test_chaos.py  test_frontend_e2e.py  test_frontend_e2e_extended.py  test_frontend_flows.py  test_integration_full.py  test_lifecycle.py  test_nmt_e2e.py  test_nmt_paragraphs.py  test_paragraph_streaming_live.py  test_perf_regression.py  test_real_app_stress.py  test_security.py  test_server_e2e.py  test_sse_bridge.py  test_state_transitions.py  test_tauri_shell.py  test_tts_audio_quality.py  test_tts_long_input.py  test_user_facing_strings.py  test_ux_critic.py
web/src/: App.tsx
web/src/components/avatar/: Live2DViewer.tsx
web/src/lib/: models.ts  nativeAudio.ts  tauriShell.ts  theme.ts
web/src/pages/: Avatar.tsx  Home.tsx  Pulse.tsx  Settings.tsx
