[workspace]
resolver = "2"
# companion-tauri is intentionally NOT a workspace member: its build.rs
# requires the companion-server sidecar binary to exist at
# `apps/companion-tauri/binaries/companion-server-<triple>(.exe)` *before*
# the build can proceed. Including it in `members` would break
# `cargo check --workspace` from a clean tree. Users build the sidecar
# first, then run `cd apps/companion-tauri && cargo tauri build`. See
# `apps/companion-tauri/README.md`.
members = [
    "crates/companion-core",
    "crates/companion-avatar",
    "crates/companion-pulse",
    "apps/companion-server",
]
exclude = ["apps/companion-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["zeroclaw-companion contributors"]
repository = "https://github.com/Wty2003328/zeroclaw-companion"
rust-version = "1.88"

[workspace.dependencies]
# Internal crates
companion-core = { path = "crates/companion-core", version = "0.1.0" }
companion-avatar = { path = "crates/companion-avatar", version = "0.1.0" }
companion-pulse = { path = "crates/companion-pulse", version = "0.1.0" }

# Async runtime
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "signal", "process", "fs"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures-util = "0.3"

# HTTP / WS
axum = { version = "0.8", features = ["ws", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

# Errors / logging
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
async-trait = "0.1"
base64 = "0.22"
uuid = { version = "1.22", features = ["v4"] }
regex = "1.10"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
