[package]
name = "companion-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "zeroclaw-companion server: serves the avatar/Pulse UI, drives TTS, bridges to the upstream zeroclaw daemon."

[[bin]]
name = "companion-server"
path = "src/main.rs"

[dependencies]
companion-core.workspace = true
companion-avatar.workspace = true
companion-pulse.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
axum = { workspace = true, features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

serde.workspace = true
serde_json.workspace = true
toml.workspace = true

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true

[dev-dependencies]
tempfile = "3.26"
reqwest.workspace = true
