[package]
name = "companion-tauri"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["zeroclaw-companion contributors"]
description = "Tauri 2 desktop shell for the zeroclaw companion. Bundles companion-server as a sidecar."
publish = false

# This crate is intentionally NOT a member of the parent workspace
# (its build.rs requires the sidecar binary to exist before compile).
# So all metadata is inlined here, NOT inherited via `.workspace = true`.

[lib]
name = "companion_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "companion-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
# Native file dialogs for Settings → Browse buttons (TTS launcher,
# reference audio, GPT-SoVITS root). HTML5 <input type=file> hands
# us a File object; we need the OS-level path to feed the launcher.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
anyhow = "1"
# Native audio playback. WebView2 on Windows classifies its audio
# stream as "communications" (AGC + acoustic echo cancellation), which
# audibly degrades TTS playback. rodio uses cpal → WASAPI in the host
# process directly, which Windows classifies as multimedia and leaves
# untouched. Frontend invokes us via tauri::command instead of using
# its <video> element when the host is Tauri.
rodio = { version = "0.20", default-features = false, features = ["wav", "hound"] }
base64 = "0.22"
# Tiny blocking HTTP client used during graceful shutdown — calls
# companion-server's POST /api/shutdown and polls /health from a std
# thread (this code path runs after WindowEvent::Destroyed, off the
# tokio runtime). ureq is the smallest sync HTTP client (~50KB).
ureq = { version = "2", default-features = false }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
