[package]
name = "companion-avatar"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Live2D anime avatar subsystem for the zeroclaw companion."

[dependencies]
companion-core.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
base64.workspace = true
uuid.workspace = true
regex.workspace = true

[dev-dependencies]
toml.workspace = true
# axum + tokio with full features so tests can spin up an ephemeral
# mock TTS server on a random port and exercise the wire contract end-to-end.
tokio = { workspace = true, features = ["full"] }
