[package]
name = "companion-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared types, zeroclaw API client, and OpenAI-compatible LLM client for the zeroclaw companion."

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
reqwest.workspace = true
eventsource-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
url.workspace = true
chrono.workspace = true

[dev-dependencies]
axum = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["full"] }
